Got rid of show/hide, fixed columns in heroes for healthcare
I changed the percentages for width/height for the pictures too, because they wouldn't stay in the right place without the extra rows around each of them.

--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -14,90 +14,83 @@
     <br />
     <br />
     <div class="row">
-        <div class="col-sm-1">
-        </div>
         <img src="/Images/Heroes Logo.png" height="5%" width="10%" />
-        <div class="col-sm-8" align="center">
+        <div class="col-sm-10" align="center">
             <h1 align="center" class="heading1">Heroes For Healthcare</h1>
         </div>
     </div>
 
     <br />
     <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="codeTheWay.html" class="button">Code The Way</a>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="lifeNavigators.html" class="button">Life Navigators</a>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3" align="center">
             <a href="media.html" class="button">Media</a>
         </div>
     </div>
     <br />
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-2">
-            <h3 class="heading2">Mision</h3>
-        </div>
-        <div class="col-sm-5">
-            <p class="body">
-                Our non-profit organization is a resource for our military personnel to start a career in healthcare.
-            </p>
-        </div>
-        <img src="/Images/Heroes2.png" height="15%" width="30%" align="left" />
-    </div>
-    <br />
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-2">
-            <h3 class="heading2">Unemployed Veterans</h3>
-        </div>
-        <div class="col-sm-5">
-            <p class="body">
-                Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
-            </p>
-                <ul>
-                    <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
-                    <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
-                </ul>
-        </div>
-        <img src="/Images/Heroes3.png" height="15%" width="30%" align="right" />
-    </div>
-    <br />
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-2">
-            <button onclick="showHide()" class="button">Show Message</button>
-        </div>
-    </div>
-    <br />
-    <div id="message">
+    <div class="container">
         <div class="row">
-            <div class="col-sm-1">
-            </div>
-            <div class="col-sm-2">
-                <h3 class="heading2">Message From the President</h3>
+            <div class="col-sm-7">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h3 class="heading2">Mision</h3>
+                    </div>
+                    <div class="col-sm-9">
+                        <p class="body">
+                            Our non-profit organization is a resource for our military personnel to start a career in healthcare.
+                        </p>
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h3 class="heading2">Unemployed Veterans</h3>
+                    </div>
+                    <div class="col-sm-9">
+                        <p class="body">
+                            Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
+                        </p>
+                        <ul>
+                            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
+                            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h3 class="heading2">Message From the President</h3>
+                    </div>
+                    <div class="col-sm-9">
+                        <p class="body">
+                            I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
+
+                            We need supporters like you to help our mission so our service members can get a job and better their lives.
+
+                            After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-5">
-                <p class="body">
-                    I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
-
-                    We need supporters like you to help our mission so our service members can get a job and better their lives.
-
-                    After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
-                </p>
+                <div class="row">
+                    <img src="/Images/Heroes2.png" height="100%" width="100%" />
+                </div>
+                <div class="row">
+                    <img src="/Images/Heroes3.png" height="100%" width="100%" />
+                </div>
             </div>
         </div>
     </div>
+    
     <br />
 </body>
 </html>
