Fixed Media page
It looks so much nicer now

--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -10,7 +10,7 @@
 
     <title>Heroes For Healthcare</title>
 </head>
-<body onload="hide()">
+<body>
     <br />
     <br />
     <div class="row">
