--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -10,131 +10,131 @@
     <br />
     <br />
     <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-10" align="center">
+        <div class="col-sm-12" align="center">
             <h1 align="center" class="heading1">Media</h1>
         </div>
     </div>
 
     <br />
     <div class="row">
-        <div class="col-sm-1">
+        <div class="col-sm-3" align="center">
+            <a href="codeTheWay.html" class="button" >Code The Way</a>
         </div>
-        <div class="col-sm-3">
-            <a href="codeTheWay.html" class="button">Code The Way</a>
-        </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="lifeNavigators.html" class="button">Life Navigators</a>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3" align="center">
             <a href="media.html" class="button">Media</a>
         </div>
     </div>
     <br />
-    <div class="row">
-        <div class="col-sm-1">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/Images/Code Review.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/Definition of done.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/Project Management.jpg" height="100%" width="100%" />
+            </div>
         </div>
-        <img src="/Images/Code Review.jpg" height="20%" width="30%" />
-        <img src="/Images/Definition of done.jpg" height="20%" width="30%" />
-        <img src="/Images/Project Management.jpg" height="20%" width="30%" />
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
+        <div class="row">
+            <div class="col-sm-4">
+                <p class="body">Code Review</p>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Definition of Done</p>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Project Management</p>
+            </div>
         </div>
-        <div class="col-sm-4">
-            <p class="body">Code Review</p>
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/Images/Sprint Planning.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/Sprint Review.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/Sprint review-code demo.jpg" height="100%" width="100%" />
+            </div>
         </div>
-        <div class="col-sm-4">
-            <p class="body">Definition of Done</p>
+        <div class="row">
+            <div class="col-sm-4">
+                <p class="body">Sprint Planning</p>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Sprint Review</p>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Sprint Review - Code Demo</p>
+            </div>
         </div>
-        <div class="col-sm-3">
-            <p class="body">Project Management</p>
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/Images/Stand Up.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/Team Learning.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/To do list.jpg" height="100%" width="100%" />
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
+        <div class="row">
+            <div class="col-sm-4">
+                <p class="body">Stand Up</p>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Team Learning</p>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">To Do List</p>
+            </div>
         </div>
-        <img src="/Images/Sprint Planning.jpg" height="20%" width="30%" />
-        <img src="/Images/Sprint Review.jpg" height="20%" width="30%" />
-        <img src="/Images/Sprint review-code demo.jpg" height="20%" width="30%" />
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/Images/Update.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/Work Time.jpg" height="100%" width="100%" />
+            </div>
         </div>
-        <div class="col-sm-4">
-            <p class="body">Sprint Planning</p>
+        <div class="row">
+            <div class="col-sm-4">
+                <p class="body">Update</p>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Work Time</p>
+            </div>
         </div>
-        <div class="col-sm-4">
-            <p class="body">Sprint Review</p>
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/Images/Team Programming.jpg" height="100%" width="100%" />
+            </div>
+            <div class="col-sm-4">
+            </div>
+            <div class="col-sm-4">
+                <img src="/Images/Hallway.jpg" height="100%" width="100%" />
+            </div>
         </div>
-        <div class="col-sm-3">
-            <p class="body">Sprint Review - Code Demo</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <img src="/Images/Stand Up.jpg" height="20%" width="30%" />
-        <img src="/Images/Team Learning.jpg" height="20%" width="30%" />
-        <img src="/Images/To do list.jpg" height="20%" width="30%" />
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-4">
-            <p class="body">Stand Up</p>
-        </div>
-        <div class="col-sm-4">
-            <p class="body">Team Learning</p>
-        </div>
-        <div class="col-sm-3">
-            <p class="body">To Do List</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <img src="/Images/Update.jpg" height="20%" width="30%" />
-        <img src="/Images/Work Time.jpg" height="20%" width="30%" />
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-4">
-            <p class="body">Update</p>
-        </div>
-        <div class="col-sm-2">
-            <p class="body">Work Time</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <img src="/Images/Team Programming.jpg" height="15%" width="20%" />
-        <div class="col-sm-4">
-        </div>
-        <img src="/Images/Hallway.jpg" height="15%" width="20%" />
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-4">
-            <p class="body">Team Programming</p>
-        </div>
-        <div class="col-sm-3">
-        </div>
-        <div class="col-sm-3">
-            <p class="body">Hallway</p>
+        <div class="row">
+            <div class="col-sm-4">
+                <p class="body">Team Programming</p>
+            </div>
+            <div class="col-sm-4">
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Hallway</p>
+            </div>
         </div>
     </div>
     <br />
-
-
-
-
 </body>
 </html>
