--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -11,30 +11,32 @@
 
 <body onload="hide()">
 
-    <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%" /><h1 align="center" class="heading1">Code the Way</h1>
+    <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%" />
+    <h1 align="center" class="majorHeading">Code the Way</h1>
 
-    <h3 class="heading2">Mission</h3>
-    <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
-    <p class="body">Code the Way model includes:</p>
-    <div class="container">
+    <h3 class="minorHeading">Mission</h3>
+    <div class="bodyText">
+        <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
+        <p>Code the Way model includes:</p>
         <ul>
-            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
-            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
-            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
+            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
+            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
+            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
         </ul>
-    </div>
- 
+    </div> 
     <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
 
-    <button onclick="showHide()" class="button">Show Vision</button>
-    <div class="container" id="vision">
-        <h3 class="heading2">Vision</h3>
-        <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+    <button onclick="showHide()" class="buttonFormatting">Show Vision</button>
+    <div id="vision">
+        <h3 class="minorHeading">Vision</h3>
+        <div class="bodyText">
+            <p>High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+        </div>
     </div>
-    <h3 class="heading2">Links</h3>
-    <a href="lifeNavigators.html" class="button">Life Navigators</a>
-    <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
-    <a href="media.html" class="button">Media</a>
+    <h3 class="minorHeading">Links</h3>
+    <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
+    <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
+    <a href="media.html" class="buttonFormatting">Media</a>
 
 </body>
 
