--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -37,14 +37,14 @@
             Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
         </p>
         <ul>
-            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
-            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
+            <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
+            <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
         </ul>
 
     </div>
     <br />
 
-    <button onclick="showHide()" class="button">Show Message</button>
+    <button onclick="showHide()" class="buttonFormatting">Show Message</button>
     <br />
 
     <div id="message">
