--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -19,9 +19,9 @@
         <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
         <p>Code the Way model includes:</p>
         <ul>
-            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
-            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
-            <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
+            <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
+            <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
+            <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
         </ul>
     </div> 
     <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
