--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -3,39 +3,28 @@
 <head>
     <link rel="stylesheet" href="codeTheWaycss.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
     <title>Heroes For Healthcare</title>
 </head>
 <body onload="hide()">
 
-    <img src="/Images/Heroes Logo.png" height="5%" width="10%" /> 
+    <img src="/Images/Heroes Logo.png" height="5%" width="10%" />
     <h1 align="center" class="majorHeading">Heroes For Healthcare</h1>
 
     <img src="/Images/Heroes2.png" height="20%" width="35%" align="left" />
     <br />
     <h3 class="minorHeading">Mision</h3>
     <div class="bodyText">
-        <p>
-            Our non-profit organization is a resource for our military personnel to start a career in healthcare.
-        </p>
+        <p>Our non-profit organization is a resource for our military personnel to start a career in healthcare.</p>
     </div>
 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+    <br />    <br />    <br />    <br />    <br />    <br />
     <img src="/Images/Heroes3.png" height="20%" width="35%" align="right" />
-
 
     <h3 class="minorHeading">Unemployed Veterans</h3>
     <div class="bodyText">
-        <p>
-            Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
-        </p>
+        <p>Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.</p>
         <ul>
             <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
             <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
@@ -52,9 +41,7 @@
         <div class="bodyText">
             <p>
                 I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
-
                 We need supporters like you to help our mission so our service members can get a job and better their lives.
-
                 After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
             </p>
         </div>
