Css changes started on CTW

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="codeTheWaycss.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="codeTheWaycss.css">
 
     <title>Code the Way</title>
 </head>
@@ -17,23 +17,23 @@
     <div class="row">
         <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%"/>
         <div class="col-sm-10" align="center">
-            <h1 align="center" class="heading1">Code the Way</h1>
+            <h1 align="center" class="majorHeading">Code the Way</h1>
         </div>
     </div>
     <br />
 
     <div class="row">
         <div class="col-sm-3" align="center">
-            <a href="codeTheWay.html" class="button">Code The Way</a>
+            <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
         </div>
         <div class="col-sm-3" align="center">
-            <a href="lifeNavigators.html" class="button">Life Navigators</a>
+            <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
         </div>
         <div class="col-sm-3" align="center">
-            <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
+            <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
         </div>
         <div class="col-sm-3" align="center">
-            <a href="media.html" class="button">Media</a>
+            <a href="media.html" class="buttonFormatting">Media</a>
         </div>
     </div>
     <br />
@@ -43,25 +43,29 @@
             <div class="col-sm-7">
                 <div class="row">
                     <div class="col-sm-2">
-                        <h3 class="heading2">Mission</h3>
+                        <h3 class="minorHeading">Mission</h3>
                     </div>
-                    <div class="col-sm-10">
-                        <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
-                        <p class="body">Code the Way model includes:</p>
-                        <ul>
-                            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
-                            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
-                            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
-                        </ul>
+                    <div class="bodyText">
+                        <div class="col-sm-10">
+                            <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
+                            <p>Code the Way model includes:</p>
+                            <ul>
+                                <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
+                                <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
+                                <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <br />
                 <div class="row">
                     <div class="col-sm-2">
-                        <h3 class="heading2">Vision</h3>
+                        <h3 class="minorHeading">Vision</h3>
                     </div>
-                    <div class="col-sm-10">
-                        <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+                    <div class="bodyText">
+                        <div class="col-sm-10">
+                            <p>High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+                        </div>
                     </div>
                 </div>
             </div>
