Css is fixed up

--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -11,23 +11,23 @@
     <br />
     <div class="row">
         <div class="col-sm-12" align="center">
-            <h1 align="center" class="heading1">Media</h1>
+            <h1 align="center" class="majorHeading">Media</h1>
         </div>
     </div>
 
     <br />
     <div class="row">
         <div class="col-sm-3" align="center">
-            <a href="codeTheWay.html" class="button" >Code The Way</a>
+            <a href="codeTheWay.html" class="buttonFormatting" >Code The Way</a>
         </div>
         <div class="col-sm-3" align="center">
-            <a href="lifeNavigators.html" class="button">Life Navigators</a>
+            <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
         </div>
         <div class="col-sm-3" align="center">
-            <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
+            <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
         </div>
         <div class="col-sm-3" align="center">
-            <a href="media.html" class="button">Media</a>
+            <a href="media.html" class="buttonFormatting">Media</a>
         </div>
     </div>
     <br />
@@ -45,13 +45,13 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <p class="body">Code Review</p>
+                <p class="bodyText">Code Review</p>
             </div>
             <div class="col-sm-4">
-                <p class="body">Definition of Done</p>
+                <p class="bodyText">Definition of Done</p>
             </div>
             <div class="col-sm-4">
-                <p class="body">Project Management</p>
+                <p class="bodyText">Project Management</p>
             </div>
         </div>
         <div class="row">
@@ -67,13 +67,13 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <p class="body">Sprint Planning</p>
+                <p class="bodyText">Sprint Planning</p>
             </div>
             <div class="col-sm-4">
-                <p class="body">Sprint Review</p>
+                <p class="bodyText">Sprint Review</p>
             </div>
             <div class="col-sm-4">
-                <p class="body">Sprint Review - Code Demo</p>
+                <p class="bodyText">Sprint Review - Code Demo</p>
             </div>
         </div>
         <div class="row">
@@ -89,13 +89,13 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <p class="body">Stand Up</p>
+                <p class="bodyText">Stand Up</p>
             </div>
             <div class="col-sm-4">
-                <p class="body">Team Learning</p>
+                <p class="bodyText">Team Learning</p>
             </div>
             <div class="col-sm-4">
-                <p class="body">To Do List</p>
+                <p class="bodyText">To Do List</p>
             </div>
         </div>
         <div class="row">
@@ -108,10 +108,10 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <p class="body">Update</p>
+                <p class="bodyText">Update</p>
             </div>
             <div class="col-sm-4">
-                <p class="body">Work Time</p>
+                <p class="bodyText">Work Time</p>
             </div>
         </div>
         <div class="row">
@@ -126,12 +126,12 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <p class="body">Team Programming</p>
+                <p class="bodyText">Team Programming</p>
             </div>
             <div class="col-sm-4">
             </div>
             <div class="col-sm-4">
-                <p class="body">Hallway</p>
+                <p class="bodyText">Hallway</p>
             </div>
         </div>
     </div>
