--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="codeTheWaycss.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <title>Code the Way</title>
 </head>
 
-<body>
+<body onload="hide">
     <br />
     <br />
     <div class="row">
@@ -40,13 +40,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-3">
                         <h3 class="minorHeading">Mission</h3>
                     </div>
-                    <div class="bodyText">
-                        <div class="col-sm-10">
+                    <div class="col-sm-9">
+                        <div class="bodyText">
                             <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
                             <p>Code the Way model includes:</p>
                             <ul>
@@ -59,17 +59,22 @@
                 </div>
                 <br />
                 <div class="row">
-                    <div class="col-sm-2">
+                    <button onclick="showHide()">Show Vision</button>
+                </div>
+                <div id="vision" class="row" >
+                    <div class="col-sm-3">
                         <h3 class="minorHeading">Vision</h3>
                     </div>
-                    <div class="bodyText">
-                        <div class="col-sm-10">
+                    <div class="col-sm-9">
+                        <div class="bodyText">
                             <p>High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <img src="/Images/Team Learning.jpg" height="25%" width="40%" align="right" />
+            <div class="col-sm-6">
+                <img src="/Images/Team Learning.jpg" height="100%" width="100%" align="right" />
+            </div>
         </div>
         </div>
 
