Starting to try to fix Javascript

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -59,17 +59,20 @@
                 </div>
                 <br />
                 <div class="row">
-                    <button onclick="showHide()">Show Vision</button>
+                    <button onclick="showHide()" class="buttonFormatting">Show Vision</button>
                 </div>
-                <div id="vision" class="row" >
-                    <div class="col-sm-3">
-                        <h3 class="minorHeading">Vision</h3>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="bodyText">
-                            <p>High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+                <div id="vision">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <h3 class="minorHeading">Vision</h3>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="bodyText">
+                                <p>High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
             <div class="col-sm-6">
