--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="codeTheWaycss.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="codeTheWaycss.css">
+
 
     <title>Code the Way</title>
 </head>
 
-<body onload="hide">
+<body onload="hide()">
     <br />
     <br />
     <div class="row">
@@ -72,7 +73,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="col-sm-6">
@@ -80,8 +80,6 @@
             </div>
         </div>
         </div>
-
-        
     
 </body>
 
