Life Navigators and Media fixed

--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -103,6 +103,9 @@
                 <img src="/Images/Update.jpg" height="100%" width="100%" />
             </div>
             <div class="col-sm-4">
+            </div>
+
+            <div class="col-sm-4">
                 <img src="/Images/Work Time.jpg" height="100%" width="100%" />
             </div>
         </div>
@@ -110,6 +113,9 @@
             <div class="col-sm-4">
                 <p class="bodyText">Update</p>
             </div>
+            <div class="col-sm-4">
+            </div>
+
             <div class="col-sm-4">
                 <p class="bodyText">Work Time</p>
             </div>
