--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="codeTheWaycss.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="codeTheWaycss.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <title>Life Navigators</title>
 </head>
-<body>
+<body onload="hide()">
 
     <br />
     <br />
     <div class="row">
-        <img src="/Images/LifeNavigators1.jpg" height="5%" width="10%" />
+        <div class="col-sm-2" align="center">
+            <img src="/Images/LifeNavigators1.jpg" width="50%" />
+        </div>
         <div class="col-sm-10" align="center">
-            <h1 align="center" class="majorHeading">Life Navigators</h1>
+            <p align="center" class="majorHeading">Life Navigators</p>
         </div>
     </div>
     <br />
@@ -42,7 +45,7 @@
             <div class="col-sm-6">
                 <div class="row">
                     <div class="col-sm-3">
-                        <h3 class="minorHeading">Mission</h3>
+                        <p class="minorHeading">Mission</p>
                     </div>
                     <div class="col-sm-9">
                         <div class="bodyText">
@@ -55,7 +58,7 @@
                 <br />
                 <div class="row">
                     <div class="col-sm-3">
-                        <h3 class="minorHeading">Vision</h3>
+                        <p class="minorHeading">Vision</p>
                     </div>
                     <div class="col-sm-9">
                         <div class="bodyText">
@@ -66,59 +69,41 @@
                         </div>
                     </div>
                     <br />
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h3 class="minorHeading">History</h3>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="bodyText">
-                                <p>
-                                    Life Navigators was founded by parents who were committed to developing programs and educational opportunities for their children with intellectual and developmental disabilities.
-                                </p>
-                                <ul>
-                                    <li>
-                                        1949:
-                                        Concerned families founded the organization.
-                                    </li>
-                                    <li>
-                                        1950’s:
-                                        Initiated first day school for school–aged children with severe developmental disabilities.
-                                    </li>
-                                    <li>
-                                        1960’s:
-                                        Started Milwaukee’s first Information and Referral Program focused on Disability Services.
-                                    </li>
-                                    <li>
-                                        1970’s:
-                                        Initiated Wisconsin’s first Citizen Advocacy Program matching individuals with disabilities with community volunteers for peer and social support. Became the first Corporate Guardianship provider in Milwaukee County to be licensed by the State of Wisconsin.
-                                    </li>
-                                    <li>
-                                        1980’s:
-                                        Hosted the first Challenger Golf Outing to raise funds from individuals and corporations to support programs. Designated as regional site of the National On–The–Job Training Project to develop community–based employment opportunities for persons with disabilities.
-                                    </li>
-                                    <li>
-                                        1990’s:
-                                        Initiated Milwaukee’s first Trust Program, which allowed families to plan for the financial future of their loved one with a disability.
-                                    </li>
-                                    <li>
-                                        2000’s:
-                                        Purchased and renovated a new home for our offices located at 7203 West Center Street, Wauwatosa, Wisconsin.
-                                    </li>
-                                    <li>
-                                        2010’s:
-                                        Expanded the Trust Program by offering a second trust option, the Trust II Pooled Trust.
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <img src="/Images/LifeNavigators2.jpg"  />
+                <img src="/Images/LifeNavigators2.jpg" />
+            </div>
+        </div>
+        <div class="row">
+            <button onclick="showHide()" class="buttonFormatting">Show History</button>
+        </div>
+        <div id="history">
+            <div class="row">
+                <div class="col-sm-3">
+                    <p class="minorHeading">History</p>
+                </div>
+                <div class="col-sm-9">
+                    <div class="bodyText">
+                        <p>
+                            Life Navigators was founded by parents who were committed to developing programs and educational opportunities for their children with intellectual and developmental disabilities.
+                        </p>
+                        <ul>
+                            <li>1949: Concerned families founded the organization.</li>
+                                <li>1950’s: Initiated first day school for school–aged children with severe developmental disabilities.</li>
+                                <li>1960’s: Started Milwaukee’s first Information and Referral Program focused on Disability Services.</li>
+                                <li>1970’s: Initiated Wisconsin’s first Citizen Advocacy Program matching individuals with disabilities with community volunteers for peer and social support. Became the first Corporate Guardianship provider in Milwaukee County to be licensed by the State of Wisconsin.</li>
+                                <li>1980’s: Hosted the first Challenger Golf Outing to raise funds from individuals and corporations to support programs. Designated as regional site of the National On–The–Job Training Project to develop community–based employment opportunities for persons with disabilities.</li>
+                                <li>1990’s: Initiated Milwaukee’s first Trust Program, which allowed families to plan for the financial future of their loved one with a disability.</li>
+                                <li>2000’s: Purchased and renovated a new home for our offices located at 7203 West Center Street, Wauwatosa, Wisconsin.</li>
+                                <li>2010’s: Expanded the Trust Program by offering a second trust option, the Trust II Pooled Trust.</li>
+</ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
 
 </body>
 </html>
