Final CSS fixes throughout the site

--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -11,14 +11,14 @@
     <br />
     <div class="row">
         <div class="col-sm-12" align="center">
-            <h1 align="center" class="majorHeading">Media</h1>
+            <p align="center" class="majorHeading">Media</p>
         </div>
     </div>
 
     <br />
     <div class="row">
         <div class="col-sm-3" align="center">
-            <a href="codeTheWay.html" class="buttonFormatting" >Code The Way</a>
+            <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
         </div>
         <div class="col-sm-3" align="center">
             <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
@@ -32,112 +32,115 @@
     </div>
     <br />
     <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="/Images/Code Review.jpg" height="100%" width="100%" />
+        <div class="bodyText" align="center">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="/Images/Code Review.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                    <img src="/Images/Definition of done.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                    <img src="/Images/Project Management.jpg" height="100%" width="100%" />
+                </div>
             </div>
-            <div class="col-sm-4">
-                <img src="/Images/Definition of done.jpg" height="100%" width="100%" />
-            </div>
-            <div class="col-sm-4">
-                <img src="/Images/Project Management.jpg" height="100%" width="100%" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <p class="bodyText">Code Review</p>
-            </div>
-            <div class="col-sm-4">
-                <p class="bodyText">Definition of Done</p>
-            </div>
-            <div class="col-sm-4">
-                <p class="bodyText">Project Management</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="/Images/Sprint Planning.jpg" height="100%" width="100%" />
-            </div>
-            <div class="col-sm-4">
-                <img src="/Images/Sprint Review.jpg" height="100%" width="100%" />
-            </div>
-            <div class="col-sm-4">
-                <img src="/Images/Sprint review-code demo.jpg" height="100%" width="100%" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <p class="bodyText">Sprint Planning</p>
-            </div>
-            <div class="col-sm-4">
-                <p class="bodyText">Sprint Review</p>
-            </div>
-            <div class="col-sm-4">
-                <p class="bodyText">Sprint Review - Code Demo</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="/Images/Stand Up.jpg" height="100%" width="100%" />
-            </div>
-            <div class="col-sm-4">
-                <img src="/Images/Team Learning.jpg" height="100%" width="100%" />
-            </div>
-            <div class="col-sm-4">
-                <img src="/Images/To do list.jpg" height="100%" width="100%" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <p class="bodyText">Stand Up</p>
-            </div>
-            <div class="col-sm-4">
-                <p class="bodyText">Team Learning</p>
-            </div>
-            <div class="col-sm-4">
-                <p class="bodyText">To Do List</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="/Images/Update.jpg" height="100%" width="100%" />
-            </div>
-            <div class="col-sm-4">
-            </div>
+            <div class="row">
 
-            <div class="col-sm-4">
-                <img src="/Images/Work Time.jpg" height="100%" width="100%" />
+                <div class="col-sm-4">
+                    <p>Code Review</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Definition of Done</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Project Management</p>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <p class="bodyText">Update</p>
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="/Images/Sprint Planning.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                    <img src="/Images/Sprint Review.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                    <img src="/Images/Sprint review-code demo.jpg" height="100%" width="100%" />
+                </div>
             </div>
-            <div class="col-sm-4">
+            <div class="row">
+                <div class="col-sm-4">
+                    <p>Sprint Planning</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Sprint Review</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Sprint Review - Code Demo</p>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="/Images/Stand Up.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                    <img src="/Images/Team Learning.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                    <img src="/Images/To do list.jpg" height="100%" width="100%" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <p>Stand Up</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Team Learning</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>To Do List</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="/Images/Update.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                </div>
 
-            <div class="col-sm-4">
-                <p class="bodyText">Work Time</p>
+                <div class="col-sm-4">
+                    <img src="/Images/Work Time.jpg" height="100%" width="100%" />
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="/Images/Team Programming.jpg" height="100%" width="100%" />
+            <div class="row">
+                <div class="col-sm-4">
+                    <p>Update</p>
+                </div>
+                <div class="col-sm-4">
+                </div>
+
+                <div class="col-sm-4">
+                    <p>Work Time</p>
+                </div>
             </div>
-            <div class="col-sm-4">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="/Images/Team Programming.jpg" height="100%" width="100%" />
+                </div>
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-4">
+                    <img src="/Images/Hallway.jpg" height="100%" width="100%" />
+                </div>
             </div>
-            <div class="col-sm-4">
-                <img src="/Images/Hallway.jpg" height="100%" width="100%" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <p class="bodyText">Team Programming</p>
-            </div>
-            <div class="col-sm-4">
-            </div>
-            <div class="col-sm-4">
-                <p class="bodyText">Hallway</p>
+            <div class="row">
+                <div class="col-sm-4">
+                    <p>Team Programming</p>
+                </div>
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-4">
+                    <p>Hallway</p>
+                </div>
             </div>
         </div>
     </div>
