--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -21,7 +21,7 @@
             <img src="/Images/CodeTheWay Logo.png"  />
         </div>
         <div class="col-sm-10" align="center">
-            <h1 align="center" class="majorHeading">Code the Way</h1>
+            <p align="center" class="majorHeading">Code the Way</p>
         </div>
     </div>
     <br />
@@ -47,7 +47,7 @@
             <div class="col-sm-6">
                 <div class="row">
                     <div class="col-sm-3">
-                        <h3 class="minorHeading">Mission</h3>
+                        <p class="minorHeading">Mission</p>
                     </div>
                     <div class="col-sm-9">
                         <div class="bodyText">
@@ -68,7 +68,7 @@
                 <div id="vision">
                     <div class="row">
                         <div class="col-sm-3">
-                            <h3 class="minorHeading">Vision</h3>
+                            <p class="minorHeading">Vision</p>
                         </div>
                         <div class="col-sm-9">
                             <div class="bodyText">
