--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -19,7 +19,7 @@
             <img src="/Images/Heroes3.png" width="50%" />
         </div>
         <div class="col-sm-10" align="center">
-            <h1 align="center" class="majorHeading">Heroes For Healthcare</h1>
+            <p align="center" class="majorHeading">Heroes For Healthcare</p>
         </div>
     </div>
 
@@ -44,7 +44,7 @@
             <div class="col-sm-7">
                 <div class="row">
                     <div class="col-sm-3">
-                        <h3 class="minorHeading">Mision</h3>
+                        <p class="minorHeading">Mision</p>
                     </div>
                     <div class="col-sm-9">
                         <div class="bodyText">
@@ -57,7 +57,7 @@
                 <br />
                 <div class="row">
                     <div class="col-sm-3">
-                        <h3 class="minorHeading">Unemployed Veterans</h3>
+                        <p class="minorHeading">Unemployed Veterans</p>
                     </div>
                     <div class="col-sm-9">
                         <div class="bodyText">
@@ -85,7 +85,7 @@
         <div id="message">
             <div class="row">
                 <div class="col-sm-3">
-                    <h3 class="minorHeading">Message From the President</h3>
+                    <p class="minorHeading">Message From the President</p>
                 </div>
                 <div class="col-sm-9">
                     <div class="bodyText">
