--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
     <title>Life Navigators</title>
 </head>
-<body onload="hide()">
-    <h1 align="center" class="majorHeading">Life Navigators</h1>
-    <h3 class="minorHeading">Mission</h3>
+<body onload="showHide()">
+    <p align="center" class="majorHeading">Life Navigators</p>
+    <p class="minorHeading">Mission</p>
     <div class="bodyText">
         <p>The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.</p>
     </div>
@@ -18,7 +18,7 @@
     <img src="/Images/LifeNavigators2.jpg" height="30%" width="45%" />
     <br />
 
-    <h3 class="minorHeading">Vision</h3>
+    <p class="minorHeading">Vision</p>
     <div class="bodyText">
         <p>Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.</p>
         <a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Life Navigators is always looking for volunteers!">Volunteering</a>
@@ -27,7 +27,7 @@
 
     <button onclick="showHide()" class="buttonFormatting">Show History</button>
     <div id="history">
-        <h3 class="minorHeading">History</h3>
+        <p class="minorHeading">History</p>
         <div class="bodyText">
             <p>Life Navigators was founded by parents who were committed to developing programs and educational opportunities for their children with intellectual and developmental disabilities.</p>
             <ul>
@@ -56,11 +56,6 @@
         else {
             x.style.display = "block";
         }
-    }
-
-    function hide() {
-        var y = document.getElementById("history");
-        y.style.display = "none";
     }
 
     $(document).ready(function () {
