Fixed JS tooltips LN and Heroes

--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -26,8 +26,19 @@
     <div class="bodyText">
         <p>Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.</p>
         <ul>
-            <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
-            <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
+            <li>
+                <div class="tooltip">
+                    Number of Unemployed
+                    <div class="tooltiptext">453,000 unemployed veterans in 2016</div>
+                </div>
+            </li>
+            <li>
+                <div class="tooltip">
+                    Rates of Unemployment
+                    <div class="tooltiptext">Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans</div>
+                </div>
+            </li>
+
         </ul>
 
     </div>
@@ -62,9 +73,6 @@
         }
     }
 
-    $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-    });
 
 </script>
 
