--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -21,7 +21,10 @@
     <p class="minorHeading">Vision</p>
     <div class="bodyText">
         <p>Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.</p>
-        <a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Life Navigators is always looking for volunteers!">Volunteering</a>
+        <div class="tooltip">
+            Volunteering
+            <div class="tooltiptext">Life Navigators is always looking for volunteers!</div>
+        </div>
     </div>
     <br />
 
@@ -57,9 +60,5 @@
             x.style.display = "block";
         }
     }
-
-    $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-    });
 
 </script>
