Final fixes dropped jquery include not needed

--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -6,7 +6,7 @@
     <title>Media</title>
 </head>
 <body>
-    <h1 align="center" class="majorHeading">Media</h1>
+    <p  class="majorHeading" align="center">Media</p>
 
     <img src="/Images/Team Programming.jpg" width="30%" />
     <img src="/Images/Code Review.jpg" width="30% />
